@@ -1,41 +1,0 @@
-
-R version 3.2.0 (2015-04-16) -- "Full of Ingredients"
-Copyright (C) 2015 The R Foundation for Statistical Computing
-Platform: x86_64-pc-linux-gnu (64-bit)
-
-R is free software and comes with ABSOLUTELY NO WARRANTY.
-You are welcome to redistribute it under certain conditions.
-Type 'license()' or 'licence()' for distribution details.
-
-R is a collaborative project with many contributors.
-Type 'contributors()' for more information and
-'citation()' on how to cite R or R packages in publications.
-
-Type 'demo()' for some demos, 'help()' for on-line help, or
-'help.start()' for an HTML browser interface to help.
-Type 'q()' to quit R.
-
-> 
-> library(random)
-> 
-> X <- randomNumbers()
-> dim(X)                                  # cannot easily summary stats or content
-[1] 20  5
-> #min(X)
-> #max(X)
-> 
-> X <- randomSequence()                   # here we can test min and max as it is just a shuffle
-> dim(X)
-[1] 20  1
-> min(X)
-[1] 1
-> max(X)
-[1] 20
-> 
-> X <- randomStrings()
-> dim(X)
-[1] 10  1
-> 
-> proc.time()
-   user  system elapsed 
-  0.244   0.028   5.342 
