@@ -1,3 +1,8 @@
+2017-02-04  Dirk Eddelbuettel  <edd@max.eddelbuettel.com>
+
+	* tests/minimalTests.R: At request of CRAN, run only if explicitly
+	enabled via environment variable; refactored using stopifnot()
+
 2015-07-03  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml: Install curl via the marutter PPA as r-cran-curl
